# AI-infrastructure-control-plane

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
aws/: README.md  deploy.py
aws/cloudformation/: simple.yaml
aws/config/: aws_config.yaml
aws/lambda/: lambda_handler.py
config/: agents_config.yaml
infrastructure/cloudformation/: main.yaml
src/: __init__.py  main.py
src/agents/: base_agent.py  scaling_agent.py
src/control_plane/: __init__.py  orchestrator.py
src/event_handlers/: __init__.py  cloudwatch_handler.py
src/utils/: aws_client.py  logging_config.py  metrics.py
tests/: test_base_agent.py
