[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-ai-agents"
version = "1.0.0"
description = "AI agents for automating scaling, recovery, and diagnostics using AWS services"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.34.144",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",
    "requests>=2.32.3",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "moto>=5.0.10",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "mypy>=1.11.1",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
